<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.udacitycard.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/white_background" />

    <ImageView
        android:id="@+id/udacity"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/udacity_logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:src="@drawable/blue_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:src="@drawable/blue_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/udacity"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:drawableStart="@drawable/a"
            android:gravity="center"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/first_text"
            android:textColor="#42A5F5"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:drawableStart="@drawable/b"
            android:gravity="center"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/second_text"
            android:textColor="#EC407A"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:drawableStart="@drawable/c"
            android:gravity="center"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/third_text"
            android:textColor="#BA68C8"
            android:textSize="24sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/laptop"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/web" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site"
                android:textColor="#212121"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress"
                android:textColor="#212121"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#212121"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/laptop"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:src="@drawable/laptop" />

</RelativeLayout>